--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Agis Maciel"/>
     <title>Comentário:</title>
     <!-- CSS externo -->
-    <link href="css/estilo.css" rel="stylesheet" type="text/css" media="all"/>
+    <link href="estilo.css" rel="stylesheet" type="text/css" media="all"/>
 </head>
 <body>
     <header>
@@ -39,6 +39,6 @@
             </div>
         </main>
     <!-- meu js -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
